fixed conditional styling based on dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 
   --light-theme-bg: hsl(0, 0%, 100%);
   --light-theme-txt: hsl(228, 12%, 44%);
+  --light-theme-txt-darker: hsl(230, 17%, 14%);
   --light-theme-card-bg: hsl(227, 47%, 96%);
   --light-theme-btn: hsl(230, 22%, 74%);
 
